--- a/src/main/resources/dm_basic.properties
+++ b/src/main/resources/dm_basic.properties
@@ -1,1 +1,49 @@
+# sql for test
 dm_sql = select * from qfbap_dws.dws_user_visit_month1
+
+# »ñÈ¡dm²ã¿í±í
+dm_wide_table = select us.user_id user_id, \
+       us.user_name user_name, \
+       us.user_gender user_gender, \
+       us.user_birthday user_birthday, \
+       us.user_age user_age, \
+       us.constellation constellation, \
+       us.province province, \
+       us.city city, \
+       us.city_level city_level, \
+       us.e_mail e_mail, \
+       us.op_mail op_mail, \
+       us.mobile mobile, \
+       us.num_seg_mobile num_seg_mobile, \
+       us.op_mobile op_mobile, \
+       us.register_time register_time, \
+       us.login_ip login_ip, \
+       us.login_source login_source, \
+       us.request_user request_user, \
+       us.total_score total_score, \
+       us.used_score used_score, \
+       'user_level' user_level, \
+       us.is_blacklist is_blacklist, \
+       us.is_married is_married, \
+       us.education education, \
+       us.monthly_income monthly_income, \
+       us.profession profession, \
+       ue.is_pregnant_woman is_pregnant_woman, \
+       ue.is_have_children is_have_children, \
+       ue.is_have_car is_have_car, \
+       ue.phone_brand phone_brand, \
+       ue.phone_brand_level phone_brand_level, \
+       ue.phone_cnt phone_cnt, \
+       ue.change_phone_cnt change_phone_cnt, \
+       ue.is_maja is_maja, \
+       ue.majia_account_cnt majia_account_cnt, \
+       ue.loyal_model loyal_model, \
+       ue.shopping_type_model shopping_type_model, \
+       ue.weight weight, \
+       ue.height height \
+from \
+        qfbap_dwd.dwd_user us \
+join \
+        qfbap_dwd.dwd_user_extend ue \
+on \
+        us.user_id = ue.user_id
